manifests/local/04-network-policies/external-secrets.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    # K8s API server
    - toEntities:
        - kube-apiserver
    # DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Webhook secret store
    - toFQDNs:
        - matchName: secrets.cloud.test
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
